--- a/public/backend/css/admin-style.css
+++ b/public/backend/css/admin-style.css
@@ -281,8 +281,8 @@ button {
 }
 .center-container {
     display: flex;
-    justify-content: center; /* 水平置中 */
-    align-items: center; /* 垂直置中 */ 
+    justify-content: center; 
+    align-items: center; 
 }
 .order-header {
 	display: grid;
